Sponsors page hidden

--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,8 @@ h1 {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
+
 }
 
 .chairs-category {
@@ -154,31 +155,33 @@ body {
     flex-wrap: nowrap;
   }
   
-  /* Tablet view */
-  @media (max-width: 768px) {
-    body {
-      font-size: 14px;
-      padding: 10px;
+  /* Media Query for Smaller Screens (e.g., mobile phones) */
+@media (max-width: 768px) {
+    .logo {
+      max-width: 70px; /* Smaller logo on mobile */
     }
-  
-    .container {
-      flex-direction: column;
-      padding: 0;
+    
+    .hamburger {
+      font-size: 25px; /* Adjust hamburger size */
     }
-  }
-  
-  /* Mobile view */
-  @media (max-width: 480px) {
-    body {
-      font-size: 12px;
-      padding: 5px;
+    
+    header {
+      padding: 5px 15px; /* Reduce padding for smaller screens */
     }
+}
   
-    .container {
-      flex-direction: column;
-      padding: 0;
+ /* Media Query for Smaller Screens (e.g., mobile phones) */
+@media (max-width: 348px) {
+    .logo {
+      max-width: 40px; /* Smaller logo on mobile */
     }
-  }
-  
-
+    
+    .hamburger {
+      font-size: 10px; /* Adjust hamburger size */
+    }
+    
+    header {
+      padding: 3px 8px; /* Reduce padding for smaller screens */
+    }
+}
  
