Content and banner updated

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ h1 {
 
 .chairs-category h3 {
     font-size: 1.4em;
-    border-left: 4px solid #FFCC00;
+    border-left: 4px solid #b41a3ec3;
     padding-left: 10px;
     color: #333;
     margin-bottom: 15px;
